tests/resources/errors/errors16.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

void foo() raises TestError {
    raise TestError{};
}

void bar() raises TestError {
    try foo();
}

void main() {
    try err: bar() {
        std.print("caught error!");
        std.print(err.get_message());
    };

    try bar();
}